#summary ChangeLog for releases.

= DDT Change Log =

== DDT 0.7.0 (development) ==
 * Implemented #3 : support Debian Linux DMD layout
 * -v2 switch is no longer included in default GDC build response file.
 * Code Completion icons now consistent with the rest of the IDE UI:
  * (previously some decorators for storage classes or protection attributes were missing, 
    and JDT like icons where not supported in Code Completion popup)
 * Fixed a bug with selective imports presenting all module symbols, not just the selected ones.
 * Fixed bug in D Appearance preference page - var and funtions showing up as Structs in preview.
 * Added mixin template instance to listed model elements in UI (for example, outline)
 * -- Preview Release 0.7.0 --
 * Requirements changes: now requires minimum Java VM version 1.7 .
 * Implemented #2: Support parsing of latest D syntax (up to D language version 2.063).
   * Completely rewrote D parser, creating a new hand-written parser (IDE no longer depends on descent.compiler).
 * Holding Ctrl and clicking over a reference now always opens a new editor set on the reference target.
 * Fixed NPE bug when opening D search page with a package reference selected in the editor.
 * Fixed minor parser AFE bug with qualified reference at end of file.
 * Fixed minor bug when resolving modules without module declarations (implicit module name).

== DDT 0.6.0 (2012-05-17) ==
 * Fixed bug causing DDT to never load the pre-defined editor Code Templates.
 * Added support for GDC, as well as a generic compiler install. ([http://code.google.com/a/eclipselabs.org/p/ddt/issues/detail?id=59 issue@ELabs #59])
 * Added support for DMD Unix style compiler installs ("usr/bin/dmd" and similar). ([http://code.google.com/a/eclipselabs.org/p/ddt/issues/detail?id=56 issue@ELabs #56])
 * Fixed several bugs with the D Search Page (incorrect or missing search matches). 