@@ -1,0 +1,4 @@
+Ⓗ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
+
+#@NONSCOPED_CONDITIONALS《version(yes)●debug(tests)●static if(true) 》
+#@NONSCOPED_CONTAINERS《#@ATTRIBS__LITE●#@NONSCOPED_CONDITIONALS》
