@@ -1,17 +1,0 @@
-Ⓗ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
-▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
-module tests;
-
-int fA;
-class Foo {
-	int fooA;
-	int fooB;
-	Xpto xpto;
-	
-	static class Inner { int innerx; }
-}
-
-void func() {
-	int fB;
-	f#REFSEARCH¤【fA▪fB▪func】;
-}
